updated dazzle with z-index fix for modal line

--- a/MitraDazzle.less
+++ b/MitraDazzle.less
@@ -960,6 +960,14 @@ button .buttonbar-img {
   }
 }
 
+.yui-panel-container{
+  z-index: 101 !important;
+}
+
+.mask{
+  z-index: 101 !important;
+}
+
 // #ir-pager .slick-pager {
 //     height: auto !important;
 //     border: 1px solid transparent !important;
