--- a/pfizer-fix-v3.less
+++ b/pfizer-fix-v3.less
@@ -224,39 +224,48 @@
     }
 }
 
+#footer3{
+    display: flex;
+    gap: 4px;
+    br{
+        display: none;
+    }
+}
+
+
 /*
  * TEMPLATE USABILITY OPTIONS
  * The following styles are overrides for new styling and layout introduced out-of-the-box in TeamConnect 6.X 
 */
 
 /* Increase block and field readabilty */
-// .tcblock, .blockDiv:has(.bg_blockhdr, .blockTitleDiv, .bg_blockcolor) {
-//     background-color: #fff;
-//     // padding: 1.2em 1em;
-//     margin: 1em 0;
+.tcblock, .blockDiv:has(.bg_blockhdr, .blockTitleDiv, .bg_blockcolor) {
+    // background-color: #fff;
+    // // padding: 1.2em 1em;
+    // margin: 1em 0;
 
-//     .bg_blockcolor {
-//         background-color: transparent !important;
-//     }
+    // .bg_blockcolor {
+    //     background-color: transparent !important;
+    // }
 
-//     .bg_blockhdr {
-//         padding: 0;
-//         padding-bottom: 4px;
-//         margin: 0 12px;
-//         // h3 {
-//         //     font-weight: bold;
-//         // }
-//     }
+    // .bg_blockhdr {
+    //     padding: 0;
+    //     padding-bottom: 4px;
+    //     margin: 0 12px;
+    //     // h3 {
+    //     //     font-weight: bold;
+    //     // }
+    // }
 
-//     .field-cell {
-//         flex-flow: row nowrap !important;
-//         .label, .memo_label, .texthdr {
-//             text-transform: none !important;
-//             font-size: inherit !important;
-//             font-weight: bold !important;
-//             width: 180px;
-//             overflow-wrap: break-word;
-//             color: #222222;
-//         }
-//     }
-// }
+    .field-cell {
+        // flex-flow: row nowrap !important;
+        .label, .memo_label, .texthdr {
+            text-transform: none !important;
+            font-size: .9em !important;
+            font-weight: bold !important;
+            // width: 180px;
+            // overflow-wrap: break-word;
+            // color: #222222;
+        }
+    }
+}
